@@ -6,6 +6,7 @@ plugins {
     kotlin("plugin.serialization")
     id("com.github.johnrengelman.shadow")
     id("org.jlleitschuh.gradle.ktlint")
+    id("io.kotest") version "0.3.8"
 }
 
 application {
@@ -17,7 +18,6 @@ dependencies {
     implementation(project(":libs:hops-common-kafka"))
     implementation(project(":libs:hops-common-ktor"))
     implementation("io.github.microutils:kotlin-logging-jvm:2.0.11")
-    implementation("io.ktor:ktor-client-cio:1.6.4")
     implementation("io.ktor:ktor-client-serialization:1.6.4")
     implementation("io.ktor:ktor-metrics-micrometer:1.6.4")
     implementation("io.ktor:ktor-serialization:1.6.4")
@@ -45,6 +45,8 @@ tasks {
             showExceptions = true
             exceptionFormat = TestExceptionFormat.FULL
         }
+
+        jvmArgs = listOf("--add-opens=java.base/java.util=ALL-UNNAMED")
     }
 }
 
